--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ border-radius: 20px}
 </style>
 </head>
 <body>
-<center><h1>Física y química</h1></center>
+<center><h1>Física y Química</h1></center>
 <dl>
 <dt>Profesor:</dt><dd>Manuel Pavón Núñez</dd>
 <dt>Actividades desarrolladas:</dt>
